# KonEngine

./: .gitignore  .gitmodules  BUGTRACKER.md  CMakeLists.txt  DEPENDENCIES.md  DOCS.md  KonEngine  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  build-anim_compiler.bat  build-anim_compiler.sh  build-konpaktor.sh  build-test.bat  build-test.sh  build-tools.bat  build-tools.sh  build-windows.sh  build.bat  dependencies.txt  install-all.sh  install.bat  install.sh
.cache/clangd/index/: KonEngine.hpp.3043DEC50E398314.idx  glad.c.2225C9F29D2F55BA.idx  glad.h.85AD16E83A6216D7.idx  khrplatform.h.442C32830BD18F8D.idx  main.cpp.8762597D926F0A25.idx  opengl_renderer.cpp.0A7ECEBDD32CAA55.idx  opengl_renderer.hpp.E90F4C991C225BE3.idx  renderer.cpp.07D8C7CD946E30A5.idx  renderer.hpp.F507ABFD8131D465.idx  time.cpp.F2D60EAF02126321.idx  time.hpp.B5DF7B528B1C9B85.idx  window.cpp.CF6678A5024D6A8C.idx  window.hpp.AEF0DB87BD231BE9.idx
.github/workflows/: cmake-single-platform.yml  release.yml
src/: KonEngine.hpp  main.cpp
src/animation/: anim_compiler.cpp  anim_complier.cpp  animation.hpp  animation_player.hpp  curves.hpp
src/audio/: audio.cpp  audio.hpp
src/camera/: camera.hpp
src/collision/: collision.cpp  collision.hpp  collision_world.cpp  collision_world.hpp
src/color/: color.hpp
src/font/: default_font.hpp  font.cpp  font.hpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/input/: input.cpp  input.hpp
src/math/: vector2.hpp
src/node/: collider2d.hpp  node.hpp  node2d.hpp  scene.hpp  sprite2d.hpp
src/renderer/: renderer.cpp  renderer.hpp  renderer_2d.hpp  renderer_base.hpp  texture.hpp
src/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
src/stb/: stb_truetype.h
src/tilemap/: tilemap.hpp
src/time/: time.cpp  time.hpp
src/window/: window.cpp  window.hpp
tests/: CMakeLists.txt  test_main.cpp
tools/KonAnimator/: CMakeLists.txt  DOCS.md  build-windows.bat  build-windows.sh  build.bat  build.sh  build_windows.sh  install.sh  window-cross-toolchain.cmake  windows-cross-toolchain.cmake
tools/KonAnimator/src/: AnimData.hpp  AnimIO.hpp  MainWindow.cpp  MainWindow.hpp  PreviewWidget.cpp  PreviewWidget.hpp  SpritesheetView.cpp  SpritesheetView.hpp  TimelineWidget.cpp  TimelineWidget.hpp  main.cpp
tools/KonPaktor/: CMakeLists.txt  DOCS.md  build.sh  install.sh
tools/KonPaktor/examples/: konpak_example.cpp
tools/KonPaktor/src/: MainWindow.cpp  MainWindow.hpp  konpak.hpp  konpak_cli.cpp  main.cpp
tools/KonScript/: CMakeLists.txt  DOCS.md  build.sh  install-nvim-konscript.sh  install.sh  konscript  ksc  test.ks  test_lexer  test_parser  test_typechecker
tools/KonScript/editor/: EDITORS.md  install.sh
tools/KonScript/editor/lsp/: konscript-lsp  konscript-lsp.cpp
tools/KonScript/editor/nvim/ftdetect/: konscript.vim
tools/KonScript/editor/nvim/ftplugin/: konscript.vim
tools/KonScript/editor/nvim/syntax/: konscript.vim
tools/KonScript/editor/vscode/konscript/: language-configuration.json  package.json
tools/KonScript/editor/vscode/konscript/syntaxes/: konscript.tmLanguage.json
tools/KonScript/include/: ast.hpp  codegen.hpp  lexer.hpp  parser.hpp  typechecker.hpp
tools/KonScript/src/: main.cpp
tools/KonScript/tests/: test_lexer.cpp  test_parser.cpp  test_typechecker.cpp
